fix underline z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -501,11 +501,13 @@ aside > div {
 }
 .titleDecor {
   position: relative;
+  z-index: 0;
 }
 .titleDecor > img {
   position: absolute;
   left: 0;
   top: 1.1em;
+  z-index: -1;
 }
 @media screen and (max-width: 480px) {
   .titleDecor > img {
